<resources>
    <string name="app_name">EASY_APP</string>
    <string name="add_task">Add Task</string>
    <string name="number_of_tasks">Number of tasks.</string>
    <string name="add_new_task">Add New Task</string>
    <string name="today_tasks">Today Tasks</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_a_new_task">Add a New Task</string>
    <string name="title">Title</string>
</resources>